# fga-data-parser

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
src/: data.py  enums.py  mystic_code.py  servant.py  skill.py
